kubernetes/apps/plex/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: media
spec:
  selector:
    app: plex
  ports:
    - name: plex-web
      protocol: TCP
      port: 32400
      targetPort: 32400
#    - name: dlna
#      protocol: UDP
#      port: 1900
#      targetPort: 1900
#    - name: bonjour
#      protocol: UDP
#      port: 5353
#      targetPort: 5353
#    - name: companion
#      protocol: TCP
#      port: 8324
#      targetPort: 8324
    - name: gdm-1
      protocol: UDP
      port: 32410
      targetPort: 32410
    - name: gdm-2
      protocol: UDP
      port: 32412
      targetPort: 32412
    - name: gdm-3
      protocol: UDP
      port: 32413
      targetPort: 32413
    - name: gdm-4
      protocol: UDP
      port: 32414
      targetPort: 32414
#    - name: dlna-access
#      protocol: TCP
#      port: 32469
#      targetPort: 32469
#  type: LoadBalancer
